# helix-tasks

./: .gitignore  package.json  vite.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/lib/: store.ts  types.ts
src/lib/components/: CalendarView.svelte  EditModal.svelte  KanbanView.svelte  ListView.svelte  QuickAdd.svelte  Sidebar.svelte  TaskCard.svelte
src/routes/: +page.svelte
