[package]
name = "helix-tasks"
version = "0.1.0"
description = "Helix Tasks — Markdown-native task manager"
authors = ["Marcelo Lavanhini"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "helix_tasks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
